update save functions

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "9dc02c2d",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
+   "id": "b111222f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gymnasium as gym\n",
+    "import torch\n",
+    "import time\n",
+    "import numpy as np\n",
+    "import torch.nn.functional as F\n",
+    "from modules import GenerativeModel, ReplayBuffer, DiscreteSACAgent, EpisodicRewardWrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4e0c00fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "LR_POLICY = 3e-4          # Learning rate for actor and critic\n",
+    "LR_GENERATIVE = 3e-4      # Learning rate for generative model\n",
+    "GAMMA = 0.99              # Discount factor\n",
+    "REPLAY_BUFFER_SIZE = 50000 # Size of the replay buffer\n",
+    "BATCH_SIZE = 256          # Batch size for training\n",
+    "TAU = 0.005               # Soft update coefficient for target networks\n",
+    "ALPHA = 0.2               # SAC temperature parameter (entropy regularization)\n",
+    "HIDDEN_DIM = 256          # Hidden dimension for neural networks\n",
+    "MAX_EPISODES = 500      # Total number of episodes to run\n",
+    "MAX_STEPS_PER_EPISODE = 500 # Max steps per episode for CartPole-v1\n",
+    "START_TRAINING_EPISODES = 10 # Number of episodes to collect data before training starts\n",
+    "\n",
+    "# Hyperparameters for the GRD generative model loss (L_reg)\n",
+    "# These control the sparsity of the learned causal graph. Increased to encourage sparsity.\n",
+    "LAMBDA_S_R = 5e-4  # state -> reward\n",
+    "LAMBDA_A_R = 1e-5  # action -> reward\n",
+    "LAMBDA_S_S = 5e-5  # state -> state\n",
+    "LAMBDA_A_S = 1e-8  # action -> state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d5b19513",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env = gym.make(\"CartPole-v1\")\n",
+    "env = EpisodicRewardWrapper(env)\n",
+    "\n",
+    "state_dim = env.observation_space.shape[0]\n",
+    "action_dim = env.action_space.n\n",
+    "\n",
+    "compact_state_dim = state_dim \n",
+    "\n",
+    "replay_buffer = ReplayBuffer(REPLAY_BUFFER_SIZE)\n",
+    "generative_model = GenerativeModel(state_dim, action_dim, HIDDEN_DIM, DEVICE, LR_GENERATIVE, GAMMA, LAMBDA_S_S, LAMBDA_S_R, LAMBDA_A_S, LAMBDA_A_R)\n",
+    "sac_agent = DiscreteSACAgent(state_dim, action_dim, compact_state_dim, HIDDEN_DIM, DEVICE, LR_POLICY, TAU, GAMMA, ALPHA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0f952861",
    "metadata": {},
    "outputs": [
@@ -3020,47 +3083,6 @@
     }
    ],
    "source": [
-    "import gymnasium as gym\n",
-    "import torch\n",
-    "import time\n",
-    "import numpy as np\n",
-    "import torch.nn.functional as F\n",
-    "from modules import RewardModel, GenerativeModel, ReplayBuffer, DiscreteSACAgent, EpisodicRewardWrapper\n",
-    "\n",
-    "\n",
-    "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "LR_POLICY = 3e-4          # Learning rate for actor and critic\n",
-    "LR_GENERATIVE = 3e-4      # Learning rate for generative model\n",
-    "GAMMA = 0.99              # Discount factor\n",
-    "REPLAY_BUFFER_SIZE = 50000 # Size of the replay buffer\n",
-    "BATCH_SIZE = 256          # Batch size for training\n",
-    "TAU = 0.005               # Soft update coefficient for target networks\n",
-    "ALPHA = 0.2               # SAC temperature parameter (entropy regularization)\n",
-    "HIDDEN_DIM = 256          # Hidden dimension for neural networks\n",
-    "MAX_EPISODES = 500      # Total number of episodes to run\n",
-    "MAX_STEPS_PER_EPISODE = 500 # Max steps per episode for CartPole-v1\n",
-    "START_TRAINING_EPISODES = 10 # Number of episodes to collect data before training starts\n",
-    "\n",
-    "# Hyperparameters for the GRD generative model loss (L_reg)\n",
-    "# These control the sparsity of the learned causal graph. Increased to encourage sparsity.\n",
-    "LAMBDA_S_R = 5e-4  # state -> reward\n",
-    "LAMBDA_A_R = 1e-5  # action -> reward\n",
-    "LAMBDA_S_S = 5e-5  # state -> state\n",
-    "LAMBDA_A_S = 1e-8  # action -> state\n",
-    "\n",
-    "\n",
-    "env = gym.make(\"CartPole-v1\")\n",
-    "env = EpisodicRewardWrapper(env)\n",
-    "\n",
-    "state_dim = env.observation_space.shape[0]\n",
-    "action_dim = env.action_space.n\n",
-    "\n",
-    "compact_state_dim = state_dim \n",
-    "\n",
-    "replay_buffer = ReplayBuffer(REPLAY_BUFFER_SIZE)\n",
-    "generative_model = GenerativeModel(state_dim, action_dim, HIDDEN_DIM, DEVICE, LR_GENERATIVE, GAMMA, LAMBDA_S_S, LAMBDA_S_R, LAMBDA_A_S, LAMBDA_A_R)\n",
-    "sac_agent = DiscreteSACAgent(state_dim, action_dim, compact_state_dim, HIDDEN_DIM, DEVICE, LR_POLICY, TAU, GAMMA, ALPHA)\n",
-    "\n",
     "print(f\"Using device: {DEVICE}\")\n",
     "print(f\"State dim: {state_dim}, Action dim: {action_dim}\")\n",
     "\n",
@@ -3150,527 +3172,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "60086a26",
+   "execution_count": null,
+   "id": "43154a34",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[38.0,\n",
-       " 14.0,\n",
-       " 28.0,\n",
-       " 60.0,\n",
-       " 17.0,\n",
-       " 18.0,\n",
-       " 12.0,\n",
-       " 18.0,\n",
-       " 31.0,\n",
-       " 16.0,\n",
-       " 26.0,\n",
-       " 22.0,\n",
-       " 12.0,\n",
-       " 11.0,\n",
-       " 11.0,\n",
-       " 19.0,\n",
-       " 13.0,\n",
-       " 13.0,\n",
-       " 16.0,\n",
-       " 13.0,\n",
-       " 11.0,\n",
-       " 11.0,\n",
-       " 27.0,\n",
-       " 29.0,\n",
-       " 22.0,\n",
-       " 11.0,\n",
-       " 25.0,\n",
-       " 20.0,\n",
-       " 45.0,\n",
-       " 16.0,\n",
-       " 16.0,\n",
-       " 11.0,\n",
-       " 18.0,\n",
-       " 43.0,\n",
-       " 28.0,\n",
-       " 17.0,\n",
-       " 20.0,\n",
-       " 12.0,\n",
-       " 23.0,\n",
-       " 58.0,\n",
-       " 37.0,\n",
-       " 37.0,\n",
-       " 21.0,\n",
-       " 29.0,\n",
-       " 15.0,\n",
-       " 41.0,\n",
-       " 70.0,\n",
-       " 91.0,\n",
-       " 83.0,\n",
-       " 118.0,\n",
-       " 132.0,\n",
-       " 109.0,\n",
-       " 229.0,\n",
-       " 169.0,\n",
-       " 169.0,\n",
-       " 166.0,\n",
-       " 119.0,\n",
-       " 130.0,\n",
-       " 222.0,\n",
-       " 352.0,\n",
-       " 184.0,\n",
-       " 175.0,\n",
-       " 219.0,\n",
-       " 150.0,\n",
-       " 203.0,\n",
-       " 170.0,\n",
-       " 188.0,\n",
-       " 168.0,\n",
-       " 156.0,\n",
-       " 166.0,\n",
-       " 232.0,\n",
-       " 192.0,\n",
-       " 190.0,\n",
-       " 154.0,\n",
-       " 171.0,\n",
-       " 178.0,\n",
-       " 174.0,\n",
-       " 159.0,\n",
-       " 202.0,\n",
-       " 189.0,\n",
-       " 191.0,\n",
-       " 218.0,\n",
-       " 177.0,\n",
-       " 186.0,\n",
-       " 202.0,\n",
-       " 188.0,\n",
-       " 197.0,\n",
-       " 197.0,\n",
-       " 184.0,\n",
-       " 195.0,\n",
-       " 220.0,\n",
-       " 212.0,\n",
-       " 168.0,\n",
-       " 231.0,\n",
-       " 171.0,\n",
-       " 197.0,\n",
-       " 193.0,\n",
-       " 187.0,\n",
-       " 195.0,\n",
-       " 176.0,\n",
-       " 180.0,\n",
-       " 213.0,\n",
-       " 176.0,\n",
-       " 192.0,\n",
-       " 192.0,\n",
-       " 231.0,\n",
-       " 252.0,\n",
-       " 181.0,\n",
-       " 226.0,\n",
-       " 215.0,\n",
-       " 186.0,\n",
-       " 229.0,\n",
-       " 174.0,\n",
-       " 184.0,\n",
-       " 183.0,\n",
-       " 500.0,\n",
-       " 191.0,\n",
-       " 240.0,\n",
-       " 264.0,\n",
-       " 193.0,\n",
-       " 275.0,\n",
-       " 183.0,\n",
-       " 208.0,\n",
-       " 179.0,\n",
-       " 206.0,\n",
-       " 268.0,\n",
-       " 264.0,\n",
-       " 218.0,\n",
-       " 224.0,\n",
-       " 500.0,\n",
-       " 302.0,\n",
-       " 194.0,\n",
-       " 218.0,\n",
-       " 254.0,\n",
-       " 205.0,\n",
-       " 241.0,\n",
-       " 188.0,\n",
-       " 247.0,\n",
-       " 231.0,\n",
-       " 232.0,\n",
-       " 193.0,\n",
-       " 218.0,\n",
-       " 243.0,\n",
-       " 199.0,\n",
-       " 187.0,\n",
-       " 249.0,\n",
-       " 420.0,\n",
-       " 249.0,\n",
-       " 500.0,\n",
-       " 191.0,\n",
-       " 225.0,\n",
-       " 252.0,\n",
-       " 441.0,\n",
-       " 319.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 452.0,\n",
-       " 487.0,\n",
-       " 372.0,\n",
-       " 363.0,\n",
-       " 382.0,\n",
-       " 436.0,\n",
-       " 427.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0,\n",
-       " 500.0]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rewards"
+    "sac_agent.save('weights')\n",
+    "generative_model.save('weights')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "04dc3996",
    "metadata": {},
    "outputs": [
@@ -3694,18 +3207,8 @@
     "plt.plot(range(len(nrewards)), nrewards)\n",
     "plt.show()\n",
     "\n",
-    "with open('weights/rewards.pkl', 'wb') as f:\n",
+    "with open('results/grd_rewards.pkl', 'wb') as f:\n",
     "    pkl.dump(rewards, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "5f8b0327",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sac_agent.save('weights')\n"
    ]
   }
  ],
@@ -3725,7 +3228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
